tests/machine/x/pl/str_builtin.out
ERROR: /workspace/mochi/tests/machine/x/pl/str_builtin.pl:4:6: Syntax error: Operator expected

