tests/machine/x/pl/str_builtin.pl
:- style_check(-singleton).
:- initialization(main, main).
main :-
    Str(123, _V0),
    writeln(_V0),
    true.
